--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -674,6 +674,7 @@
 
         JSON_URLS.addPost = "{{ path('zectranet_project_add_post', { 'project_id': project.id }) }}";
         JSON_URLS.getPosts = "{{ path('zectranet_project_get_post', { 'project_id': project.id }) }}";
+        JSON_URLS.addTask = "{{ path('zectranet_project_add_task', { 'project_id': project.id }) }}";
         JSON_URLS.getTasks = "{{ path('zectranet_project_get_tasks', { 'project_id': project.id }) }}";
 
     </script>
