--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -387,16 +387,17 @@
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-route.min.js') }}" type="text/javascript"></script>
+	{#<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-route.min.js') }}" type="text/javascript"></script>#}
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-sanitize.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-animate.min.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/sb-admin-2.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/highlight.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
+
+	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
 
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
 	{#<script src="{{ asset('bundles/zectranet/js/custom/CustomJavaScripts.js') }}"></script>#}
@@ -434,9 +435,6 @@
 			asset: "{{ asset('') }}",
 			topicsShow: "{{ path('intranet_show_topic', {topic_id: 0}) }}",
 			urlOfficeForTasks: "{{ path('intranet_show_office', {office_id: 0}) }}",#}
-
-			chatTemplate: "{{ asset('bundles/zectranet/templates/chats.html') }}",
-			taskboardTemplate: "{{ asset('bundles/zectranet/templates/taskboard.html') }}"
 		};
 
 		var SearchText = null;
