--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -118,7 +118,7 @@
         <!-- END OF SPRINT LIST -->
     </div>
 
-    <div class="chat-panel list-group" ng-controller="ChatController" ng-init="getPosts(0,10)">
+    <div class="chat-panel list-group" ng-controller="ChatController" ng-init="getPosts(0, 100)">
         <div class="list-group-item active">
             <i class="fa fa-comments fa-fw"></i>
             Office Chat
@@ -127,34 +127,33 @@
             {% if office.postsOffice | length == 0 %}
                 <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
             {% endif %}
-            <div ng-repeat="post in posts ">[[ post.message ]]</div>
             <ul class="chat">
-                {% for post in office.postsOffice %}
-                    <li class="{% if app.user.id == post.user.id %}right{% else %}left{% endif %} clearfix">
-                        <span class="chat-img {% if app.user.id == post.user.id %}pull-right{% else %}pull-left{% endif %}">
-                            <img src="{{ asset('') ~ 'documents/' ~ post.user.avatar }}" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
+                <li ng-repeat="post in posts" class="clearfix" ng-class="{'right': {{ app.user.id }} == post.user.id, 'left': {{ app.user.id }} != post.user.id }">
+                        <span class="chat-img"
+                              ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }"
+                              ng-init="avatar = generateAsset('{{ asset('') }}', 'documents/' + post.user.avatar)">
+                            <img src="#" ng-src="[[avatar]]" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
                         </span>
-                        <div class="chat-body clearfix">
-                            <div class="header" style="height: 28px;">
-                                <strong class="{% if app.user.id == post.user.id %}pull-right{% else %}pull-left{% endif %} primary-font">
-                                    {{ post.user.name ~ ' ' ~ post.user.surname ~ ' (' ~ post.user.username ~ ')' }}
-                                </strong>
-                                <small class="{% if app.user.id == post.user.id %}pull-left{% else %}pull-right{% endif %} text-muted">
-                                    <i class="fa fa-clock-o fa-fw"></i>
-                                    Posted on {{ post.posted|date('Y-m-d h:i:s') }}
-                                    {% if post.edited != null %}
-                                        <i class="fa fa-edit"></i>
-                                    {% endif %}
-                                </small>
-                            </div>
-                            <pre style="white-space: pre-line;">
-                                <span>
-                                    {{ post.message }}
-                                </span>
-                            </pre>
+                    <div class="chat-body clearfix">
+                        <div class="header" style="height: 28px;">
+                            <strong class="primary-font"
+                                    ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }">
+                                [[post.user.name + ' ' + post.user.surname + ' (' + post.user.username + ')' ]]
+                            </strong>
+
+                            <small class="text-muted" ng-class="{'pull-left': {{ app.user.id }} == post.user.id, 'pull-right': {{ app.user.id }} != post.user.id }">
+                                <i class="fa fa-clock-o fa-fw"></i>
+                                Posted on [[post.posted]]
+                                <i ng-if="post.edited" class="fa fa-edit"></i>
+                            </small>
                         </div>
-                    </li>
-                {% endfor %}
+                        <pre style="white-space: pre-line;">
+                            <span>
+                                [[ post.message ]]
+                            </span>
+                        </pre>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="list-group-item">
