--- a/src/ZectranetBundle/Resources/views/user.html.twig
+++ b/src/ZectranetBundle/Resources/views/user.html.twig
@@ -39,12 +39,12 @@
             </div>
             {% if officesCount > 3 %}
                 <a data-toggle="collapse" href="#private_office_collapse" aria-expanded="false"
-                   class="collapsed list-group-item text-center btn btn-default btn-primary">
+                   class="collapsed list-group-item text-center btn">
                     Show all
                 </a>
             {% endif %}
 
-            <a href="#" class="list-group-item text-center btn btn-default" data-toggle="modal" data-target="#add_private_office">
+            <a href="#" class="list-group-item text-center btn" data-toggle="modal" data-target="#add_private_office">
                 <span>Add New Office</span>
             </a>
         </div>
