--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -163,13 +163,19 @@
                         <i class="fa fa-file"></i>
                     </button>
                 </span>
-                <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
+                <textarea id="textarea-post"  name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
                     <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                         <span>Post</span>
                     </button>
                 </span>
             </form>
+            <div id="slide-down-menu-screenshots" style="display: none;">
+                <div id="div-screenshot" style="display: none; width: auto;height: auto;">
+
+                </div>
+                <button class="btn text-white bg-primary send-message" type="button" id="send-message" ng-click="InsertScreenshotsInChat()" style="width: 100%; height: 40px; margin-top: 10px;">Insert Screenshots in chat</button>
+            </div>
         </div>
     </div>
 {% endblock %}
@@ -208,6 +214,21 @@
 {% block javascripts %}
 {{ parent() }}
     <script>
+
+        var DeleteLastScreenshot = function() {
+            var img;
+            setTimeout(function() {
+                img = $('.img-screenshot');
+                console.log(img);
+                return img;
+            },100);
+
+            if($('.img-screenshot').length == 1) {
+                $('#slide-down-menu-screenshots').fadeOut(500);
+
+            }
+        };
+
         JSON_URLS.addPost = "{{ path('zectranet_office_add_post', { 'office_id': office.id }) }}";
         JSON_URLS.getPosts = "{{ path('zectranet_office_get_post', { 'office_id': office.id }) }}";
     </script>
