--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -291,6 +291,13 @@
 								</a>
 							</li>
 
+                            <li>
+                                <a href="{{ path('zectranet_user_settings') }}">
+                                    <i class="fa fa-gear fa-fw"></i>
+                                    Settings
+                                </a>
+                            </li>
+
 							{#
 							<li>
 								<a href="{{ path('intranet_show_personal_page') }}">
@@ -360,7 +367,7 @@
 	<div id="page-wrapper">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-xs-12">
 					{% block body %}
 					{% endblock %}
 				</div>
