--- a/src/ZectranetBundle/Resources/views/settings.html.twig
+++ b/src/ZectranetBundle/Resources/views/settings.html.twig
@@ -147,7 +147,7 @@
     </form>
     <!-- End Notification on Site -->
 
-    <form method="post" action="{{ path('zectranet_user_settings_changePassword') }}" style="margin-top: 20px;">
+    <form method="post" id="pswrdChange" action="{{ path('zectranet_user_settings_changePassword') }}" style="margin-top: 20px;">
 
         <div class="form-group">
             <div style="font-size: 1.2em;">Change password</div>
@@ -186,12 +186,12 @@
 
                     <div class="form-group">
                         <span class="control-label">New password:</span>
-                        <input name="newPassword" type="password" class="form-control" required>
+                        <input name="newPassword" id="pswrd" type="password" class="form-control" required>
                     </div>
 
                     <div class="form-group">
                         <span class="control-label">Repeat new password:</span>
-                        <input name="repeatNewPassword" type="password" class="form-control" required>
+                        <input name="repeatNewPassword" id="rpswrd" type="password" class="form-control" required>
                     </div>
 
                     <div class="form-group">
@@ -204,4 +204,20 @@
 
     </form>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/zectranet/js/notify.min.js') }}" type="text/javascript"></script>
+    <script>
+        $('#pswrdChange').on('submit', function(e) {
+            debugger;
+            var pswrd = $('#pswrd');
+            var rpswrd = $('#rpswrd');
+            if (pswrd != rpswrd) {
+                rpswrd.notify('Passwords do not match!', { position:"right" });
+                return false;
+            }
+        });
+    </script>
 {% endblock %}
