--- a/src/ZectranetBundle/Resources/views/resetPassword.html.twig
+++ b/src/ZectranetBundle/Resources/views/resetPassword.html.twig
@@ -1,27 +1,26 @@
-{% extends 'IntranetMainBundle::layout.html.twig' %}
+{% extends 'ZectranetBundle::layout.html.twig' %}
 
 {% block title %}Reset Password{% endblock %}
 
 {% block styles %}
     {{ parent() }}
-    <link href="{{ asset('bundles/intranet/css/resetPassword.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/zectranet/css/resetPassword.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
     <div class="row" style="margin-top:90px">
         <div class="col-md-12">
-            <form class="classForm" method="post" action="{{ path('intranet_reset_password_save', {'userid': userid }) }}">
+            <form class="classForm" method="post" action="{{ path('zectranet_reset_password_save', {'userid': userid }) }}">
                 <div class="containerForContent">
                     {% if messageError is defined %}
-                        <div class="message">
+                        <div class="alert alert-warning alert-dismissible fade in" role="alert" style="margin-right: 30px;">
+                            <button class="close" aria-label="Close" data-dismiss="alert" type="button">
+                                <span aria-hidden="true">×</span>
+                            </button>
                             {{ messageError }}
                         </div>
                     {% endif %}
-                    {% if messageSuccess is defined %}
-                        <div class="message1">
-                            {{ messageSuccess }}
-                        </div>
-                    {% endif %}
+
                     <div class="form-group">
                         <span class="textUp">New Password</span>
                         <input type="password" name="newPassword" class="form-control" pattern="[A-Za-z-0-9]{4,20}" required>
