--- a/src/ZectranetBundle/Resources/views/login.html.twig
+++ b/src/ZectranetBundle/Resources/views/login.html.twig
@@ -5,7 +5,7 @@
 {% block styles %}
 	{{ parent() }}
   	<!-- Loading Stylesheets -->    
-  	{#<link href="{{ asset('bundles/intranet/css/login.css') }}" rel="stylesheet">#}
+  	{#<link href="{{ asset('bundles/zectranet/css/clock.css') }}" rel="stylesheet">#}
 {% endblock %}
 
 {% block page %}
@@ -16,14 +16,21 @@
 					<div class="row animated fadeInLeftBig">
 						<div class="login-holder">
 							{% if messageError is defined %}
-								<div class="message">
-									{{ messageError }}
+                                <div class="alert alert-warning alert-dismissible fade in" role="alert">
+                                    <button class="close" aria-label="Close" data-dismiss="alert" type="button">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                    {{ messageError }}
 								</div>
 							{% endif %}
-							{% if messageError1 is defined %}
-								<div class="message1">
-									{{ messageError1 }}
-								</div>
+
+							{% if messageSuccess is defined %}
+                                <div class="alert alert-warning alert-dismissible fade in" role="alert">
+                                    <button class="close" aria-label="Close" data-dismiss="alert" type="button">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                    {{ messageSuccess }}
+                                </div>
 							{% endif %}
 							<h2 class="page-header text-center text-primary" style="font-size: 30px"> Welcome to Zectranet </h2>
 							<form role="form" action="{{ path('zectranet_login_check') }}" method="post">
@@ -55,7 +62,7 @@
 			</div>
 		</div>
 	</div>
-	{#<!-- Modal window-->
+	<!-- Modal window-->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -66,9 +73,9 @@
 					</h4>
 				</div>
 				<div class="modal-body">
-					<form method="post" action="{{ path('intranet_login_forgot_password') }}">
+					<form method="post" action="{{ path('zectranet_forgot_password') }}">
 						<div class="form-group">
-							<input type="email" class="form-control" id="inputEmail3" placeholder="Enter the email address you use to Zectranet.com" name="userEmail" required>
+							<input type="email" class="form-control" id="inputEmail3" placeholder="Enter your Email" name="userEmail" required>
 						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary" value="Continue" style="margin-top: 10px; margin-bottom: -20px;">
@@ -78,5 +85,4 @@
 			</div>
 		</div>
 	</div>
-	#}
 {% endblock %}
