--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -23,11 +23,11 @@
     {% endblock %}
 
 	{% block head %}
-		<base href="{{ app.request.getBaseUrl ~ app.request.getPathInfo }}">
+
 	{% endblock %}
 </head>
 
-<body>
+<body ng-cloak>
 
 <div id="wrapper" class="active">
 	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
