--- a/src/ZectranetBundle/Resources/views/register.html.twig
+++ b/src/ZectranetBundle/Resources/views/register.html.twig
@@ -68,7 +68,8 @@
 		$('#signup_form').bind('submit', function (event) {
 			var pass = $('#pass');
 			var repeatPass = $('#repeatpass');
-			if (pass.val() != repeatPass.val()) {
+			debugger;
+			if (pass.val() !== repeatPass.val()) {
 				repeatPass.notify(
 						"Passwords do not match",
 						{ position:"right" }
