--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -20,6 +20,7 @@
 		<link href="{{ asset('bundles/zectranet/css/style.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/style_upload.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/zectranet/css/clock.css') }}" rel="stylesheet" type="text/css">
+        <link href="{{ asset('bundles/zectranet/css/search.css') }}" rel="stylesheet" type="text/css">
     {% endblock %}
 
 	{% block head %}
