--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -21,6 +21,15 @@
         <!-- End of Project controll buttons -->
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="list-group">
+                <div class="list-group-item active">Project Description:</div>
+                <div class="list-group-item">{{ project.description }}</div>
+            </div>
+        </div>
+    </div>
+
     <!-- Begin of Tasks -->
     <div class="row" ng-controller="TaskController">
         <div class="col-md-12">
